--- a/sec1/001.md
+++ b/sec1/001.md
@@ -53,19 +53,24 @@ I bow down to Sri Hari, who is the supreme bliss, the preceptor to the world, th
 ### Commentaries
 
 {% tabs %}
-{% tab title="Jagadguru Vidyaranya" %}
-स्वप्रकशश्च्हहेतुर्यः परमात्मा चिदात्मकः ॥ अपरोक्षनुभुत्याख्यः सोहमस्मि परं सुखम् ॥ 1 ॥ ईशगुर्वात्मभेदाद्यः कलव्यवहारभूः ॥ औपाधिकः स्वचिन्मात्रः सोऽपरोक्षानुभूतिकः ॥ 2 ॥ अपरोक्षानुभूत्याख्यामाचार्योक्तिंप्रकाशये ॥ 3 ॥यद्यपीयंस्वतः स्पष्टा तथापि स्वात्मसिद्धये ॥ यत्नोयं सोपि संक्षेपात्क्रियतेऽनर्थनाशनः ॥ 4 ॥ क्वाहमुल्काकरः क्वायं सूर्यस्तेजोनिधिः किल ॥ तथापिभक्तिमानकः किंनकुर्या त्स्वहिताप्तये ॥ 5 ॥ तत्राचार्याः स्वेष्टपरदेवताऽनुसंधानलक्षणं मंगलं निर्विघ्नग्रन्थसमाप्तये स्वमनसि कृत्वा शिष्यशिक्षायै ग्रन्थादौ निबध्नांति श्रीहरिमिति ॥ अहं तं नमामीत्यन्वयः ॥ अत्रेयं प्रक्रिया पदार्थो द्विविधःआत्माऽनत्माचेति तत्रात्मा द्विविधः ईश्वरो जिवश्चेति एतावपि द्विविधौ शुद्धाऽशुद्धभेदात् तत्राऽशुद्धौ मयाऽविद्योपाधित्वेन भेदव्यवहारहेतू शुद्धौत्वभेदव्यवहारहेतू तथाऽनात्मापित्रिविधः कारणसूक्ष्मस्थूलभेदात् एतदेव शरीरत्रयमितिव्यवह्रियते एवं चिज्ज्डरूपवैलक्ष्ण्यात्तमः प्रकाशयोरिव बिभक्त्योरुभयोरात्मानात्मनोरविवेकएव बन्धकारणं तयोर्त्रिवेकस्तु मोक्षकारणमितिदिक् ॥ तत्र तावदहंशब्देन देहत्रयविशिष्टत्वेनाशुद्धोजीवः अस्यैवाऽकृष्टत्वात् नमामि नमस्करोमि स्वत्मत्वेनानुसंद्धमीत्यर्थः तस्यैव सर्वोत्कृष्टत्वेनानुसंधानयोग्यत्वामाह श्रीहरिमिति श्रियं दधानमित्यर्थः यद्वास्वाश्रयतया श्रियते स्वीक्रियतेप्रलयसुषुप्तयादौ सर्वभुतैरिति श्रीर्जीवत्वोपाधिभूताऽविद्या तां इरत्यात्मज्ञानप्रदानेन नाशयतीति श्रीहरिस्तं ननुकिमनेनाऽविद्यातत्कार्यहरणेनेत्याशंक्य परमपुरुषार्थप्राप्तिर्भवतीति सूचयितुं तस्यपरमानन्दरूपतामाह परमानन्दमिति परमोऽविनशित्वनिरतिशयत्वाभ्यामुत्कृष्ट आनन्दः सुखविशेषस्तद्रृपमित्यर्थः ॥
-{% endtab %}
 
 {% tab title="Swami Vimuktananda" %}
-I $$^1$$ bow down to Him -- to Sri Hari \(the destroyer of ignorance\), the Supreme Bliss, the First Teacher, Iswara, the All-pervading One and the Cause$$^2$$ of all Lokas \(the universe\).
+I$$^1$$ bow down to Him -- to Sri Hari \(the destroyer of ignorance\), the Supreme Bliss, the First Teacher, Iswara, the All-pervading One and the Cause$$^2$$ of all Lokas \(the universe\).
 
 $$^1$$_I_ -- The ego, the Jiva in bondage, who identifies himself with the gross, subtle and causal bodies, undergoes various sufferings and strives for liberation.   
 $$^2$$_The Cause_ -- The efficient as well as the material cause. Just as a spider weaves its net from the materials of its own body, so does Iswara create this universe out of Himself
 {% endtab %}
 
 {% tab title="Swami Chinmayananda" %}
+This is the opening stanza. It is a prayer, an invocation. When a text is taken for studies, it is a practice to prostrate before the Lord. This has been the tradition for a very long time. Prayer is an act of surrender, surrender of the ego at the altar of the Lord. Where the ego is ended, there a state of inspiration dawns. In order to bring about the surrendering of the ego and the dawn of inspiration, teachers advise us to start off with a maṅgalācaraṇa a prostration to the Lord. Here Śaṅkara is prostrating to his teacher Govindācārya. To Śaṅkara, his teacher is not a mortal individual, but a person in whom the great Truth stands revealed. It is through the mortal coil of the teacher that this Truth is communicated, but the real teacher is Śrīpati, Nārāyaṇa Himself. The human teacher is the vehicle through which the disciple listens to the words of Nārāyaṇa. Thus, the concept of the teacher is not that the teacher is himself the Lord, but the teacher is the vehicle through which the disciples listen to the words of the Lord. So this maṅgalācaraṇa is directed to both the teacher and the Lord. The Lord alone is the one who can instruct us in this great Reality. 
 
+‘Śrī Hari’ means the Lord who loots away all our misconceptions. He is a state into which the world of objects, emotions and thoughts interpreted to us through the body, mind and intellect disappears. Just as the waking condition loots away the dream and the dream-created objects and experiences, so too the state of Śrī Hari loots away our misconceptions. Hence this state of the supreme Self is said to be the state of perfect Bliss – ‘Paramānanda’. Sorrow is the product of mental agitations. Lesser the agitations, lesser is the sorrow.
+
+No agitation means no sorrow and hence the greatest happiness. Therefore, in terms of our mental experiences, the Supreme is pointed out as Paramānanda. The Lord is the protector, controller, regulator and governor of the universe. He is the one in whose presence the body, mind and intellect are functioning, in His absence there will be no function at all. He is the Īśvara or the Lord, the Lord of the vāsanās (motivating factors in the emotional personality) in us and in whose presence the vāsanās burst forth into manifestation. I prostrate to Him, who is the very cause of the universe, who is the all-pervading Reality, who is the Lord in the heart of everyone, who is pure Bliss, Śrī Hari, who is the teacher Himself.
+{% endtab %}
+
+{% tab title="Jagadguru Vidyaranya" %}
+स्वप्रकशश्च्हहेतुर्यः परमात्मा चिदात्मकः ॥ अपरोक्षनुभुत्याख्यः सोहमस्मि परं सुखम् ॥ 1 ॥ ईशगुर्वात्मभेदाद्यः कलव्यवहारभूः ॥ औपाधिकः स्वचिन्मात्रः सोऽपरोक्षानुभूतिकः ॥ 2 ॥ अपरोक्षानुभूत्याख्यामाचार्योक्तिंप्रकाशये ॥ 3 ॥यद्यपीयंस्वतः स्पष्टा तथापि स्वात्मसिद्धये ॥ यत्नोयं सोपि संक्षेपात्क्रियतेऽनर्थनाशनः ॥ 4 ॥ क्वाहमुल्काकरः क्वायं सूर्यस्तेजोनिधिः किल ॥ तथापिभक्तिमानकः किंनकुर्या त्स्वहिताप्तये ॥ 5 ॥ तत्राचार्याः स्वेष्टपरदेवताऽनुसंधानलक्षणं मंगलं निर्विघ्नग्रन्थसमाप्तये स्वमनसि कृत्वा शिष्यशिक्षायै ग्रन्थादौ निबध्नांति श्रीहरिमिति ॥ अहं तं नमामीत्यन्वयः ॥ अत्रेयं प्रक्रिया पदार्थो द्विविधःआत्माऽनत्माचेति तत्रात्मा द्विविधः ईश्वरो जिवश्चेति एतावपि द्विविधौ शुद्धाऽशुद्धभेदात् तत्राऽशुद्धौ मयाऽविद्योपाधित्वेन भेदव्यवहारहेतू शुद्धौत्वभेदव्यवहारहेतू तथाऽनात्मापित्रिविधः कारणसूक्ष्मस्थूलभेदात् एतदेव शरीरत्रयमितिव्यवह्रियते एवं चिज्ज्डरूपवैलक्ष्ण्यात्तमः प्रकाशयोरिव बिभक्त्योरुभयोरात्मानात्मनोरविवेकएव बन्धकारणं तयोर्त्रिवेकस्तु मोक्षकारणमितिदिक् ॥ तत्र तावदहंशब्देन देहत्रयविशिष्टत्वेनाशुद्धोजीवः अस्यैवाऽकृष्टत्वात् नमामि नमस्करोमि स्वत्मत्वेनानुसंद्धमीत्यर्थः तस्यैव सर्वोत्कृष्टत्वेनानुसंधानयोग्यत्वामाह श्रीहरिमिति श्रियं दधानमित्यर्थः यद्वास्वाश्रयतया श्रियते स्वीक्रियतेप्रलयसुषुप्तयादौ सर्वभुतैरिति श्रीर्जीवत्वोपाधिभूताऽविद्या तां इरत्यात्मज्ञानप्रदानेन नाशयतीति श्रीहरिस्तं ननुकिमनेनाऽविद्यातत्कार्यहरणेनेत्याशंक्य परमपुरुषार्थप्राप्तिर्भवतीति सूचयितुं तस्यपरमानन्दरूपतामाह परमानन्दमिति परमोऽविनशित्वनिरतिशयत्वाभ्यामुत्कृष्ट आनन्दः सुखविशेषस्तद्रृपमित्यर्थः ॥
 {% endtab %}
 {% endtabs %}
 
