Added slokas, transliterations for first 16 verses

--- a/sec1/002.md
+++ b/sec1/002.md
@@ -12,8 +12,13 @@ description: Purpose of the text
 सद्भिरेव प्रयत्नेन वीक्षणीया मुहुर्मुहुः ॥२॥
 {% endtab %}
 
-{% tab title="Roman" %}
-aparokṣānubhūtirvai procyate mokṣasiddhaye,   
+{% tab title="ITRANS" %}
+aparokShAnubhUtirvai prochyate mokShasiddhaye,  
+sadbhireva prayatnena vIkShaNIyA muhurmuhuH. 
+{% endtab %}
+
+{% tab title="IAST" %}
+aparokṣānubhūtirvai procyate mokṣasiddhaye,  
 sadbhireva prayatnena vīkṣaṇīyā muhurmuhuḥ.
 {% endtab %}
 {% endtabs %}
