--- a/sec1/003.md
+++ b/sec1/003.md
@@ -12,8 +12,14 @@ description: Pre-requisites for a leaner
 साधनं प्रभवेत्पुंसां वैराग्यादिचतुष्टयम्॥३॥
 {% endtab %}
 
-{% tab title="Roman" %}
-svavarṇāśramadharmeṇa tapasā haritoṣaṇāt, sādhanaṁ prabhavetpuṁsāṁ vairāgyādicatuṣṭayam.
+{% tab title="ITRANS" %}
+svavarNAshramadharmeNa tapasA haritoShaNAt,  
+sAdhanaM prabhavetpuMsAM vairAgyAdichatuShTayam.
+{% endtab %}
+
+{% tab title="IAST" %}
+svavarṇāśramadharmeṇa tapasā haritoṣaṇāt,  
+sādhanaṃ prabhavetpuṃsāṃ vairāgyādicatuṣṭayam.
 {% endtab %}
 {% endtabs %}
 
