--- a/sec1/004.md
+++ b/sec1/004.md
@@ -8,11 +8,18 @@ description: Definition of Vairagya
 
 {% tabs %}
 {% tab title="Devanagari" %}
-ब्रह्मादिस्थावरान्तेषु वैराग्यं विषयेष्वनु। यथैव काकविष्ठायां वैराग्यं तद्धि निर्मलम्॥४॥
+ब्रह्मादिस्थावरान्तेषु वैराग्यं विषयेष्वनु। 
+यथैव काकविष्ठायां वैराग्यं तद्धि निर्मलम्॥४॥
 {% endtab %}
 
-{% tab title="Roman" %}
-brahmādisthāvarānteṣu vairāgyaṁ viṣayeṣvanu, yathaiva kākaviṣṭhāyāṁ vairāgyaṁ taddhi nirmalam.
+{% tab title="ITRANS" %}
+brahmAdisthAvarAnteShu vairAgyaM viShayeShvanu,  
+yathaiva kAkaviShThAyAM vairAgyaM taddhi nirmalam.
+{% endtab %}
+
+{% tab title="IAST" %}
+brahmādisthāvarānteṣu vairāgyaṃ viṣayeṣvanu,  
+yathaiva kākaviṣṭhāyāṃ vairāgyaṃ taddhi nirmalam.
 {% endtab %}
 {% endtabs %}
 
@@ -59,4 +66,3 @@ Herein, the intimate experience of Reality \(aparokshanubhuti\) has been expound
 {% embed url="https://www.youtube.com/watch?v=3MRa2lR9MUg" caption="" %}
 
 [https://www.youtube.com/watch?v=3MRa2lR9MUg](https://www.youtube.com/watch?v=3MRa2lR9MUg)
-
