--- a/sec1/005.md
+++ b/sec1/005.md
@@ -12,8 +12,14 @@ description: Definition of Viveka
 एवं यो निश्चयः सम्यग्विवेको वस्तुनः स वै॥५॥
 {% endtab %}
 
-{% tab title="Roman" %}
-nityam-ātmasvarūpaṁ hi dṛśyaṁ tadviparītagam, evaṁ yo niścayaḥ samyag-viveko vastunaḥ sa vai.
+{% tab title="ITRANS" %}
+nityamAtmasvarUpaM hi dRRishyaM tadviparItagam,  
+evaM yo nishchayaH samyagviveko vastunaH sa vai.
+{% endtab %}
+
+{% tab title="IAST" %}
+nityamātmasvarūpaṃ hi dṛśyaṃ tadviparītagam,
+evaṃ yo niścayaḥ samyagviveko vastunaḥ sa vai.
 {% endtab %}
 {% endtabs %}
 
