--- a/sec1/006.md
+++ b/sec1/006.md
@@ -12,8 +12,14 @@ description: 'Definition of Shama, Dama'
 निग्रहो बाह्यवृत्तीनां दम इत्यभिधीयते॥६॥
 {% endtab %}
 
-{% tab title="Roman" %}
-sadaiva vāsanātyāgaḥ śamo’yamiti śabditaḥ, nigraho bāhyavṛttīnāṁ dama ityabhidhīyate.
+{% tab title="ITRANS" %}
+sadaiva vAsanAtyAgaH shamo.ayamiti shabditaH,  
+nigraho bAhyavRRittInAM dama ityabhidhIyate.
+{% endtab %}
+
+{% tab title="IAST" %}
+sadaiva vāsanātyāgaḥ śamo'yamiti śabditaḥ,  
+nigraho bāhyavṛttīnāṃ dama ityabhidhīyate.
 {% endtab %}
 {% endtabs %}
 
