--- a/sec1/007.md
+++ b/sec1/007.md
@@ -12,9 +12,14 @@ description: 'Definition of Uparati, Titiksha'
 सहनं सर्वदुःखानां तितिक्षा सा शुभा मता॥७॥
 {% endtab %}
 
-{% tab title="Roman" %}
+{% tab title="ITRANS" %}
+viShayebhyaH parAvRRittiH paramoparatirhi sA,  
+sahanaM sarvaduHkhAnAM titikShA sA shubhA matA.
+{% endtab %}
+
+{% tab title="IAST" %}
 viṣayebhyaḥ parāvṛttiḥ paramoparatirhi sā,  
-sahanaṁ sarvaduḥkhānāṁ titikṣā sā śubhā matā.
+sahanaṃ sarvaduḥkhānāṃ titikṣā sā śubhā matā.
 {% endtab %}
 {% endtabs %}
 
