--- a/sec1/008.md
+++ b/sec1/008.md
@@ -12,9 +12,14 @@ description: 'Definition of Shraddha, Samadhana'
 चित्तैकाग्र्यं तु सल्लक्ष्ये समाधानमिति स्मृतम्॥८॥
 {% endtab %}
 
-{% tab title="Roman" %}
+{% tab title="ITRANS" %}
+nigamAchAryavAkyeShu bhaktiH shraddheti vishrutA,  
+chittaikAgryaM tu sallakShye samAdhAnamiti smRRitam.
+{% endtab %}
+
+{% tab title="IAST" %}
 nigamācāryavākyeṣu bhaktiḥ śraddheti viśrutā,  
-cittaikāgryaṁ tu sallakṣye samādhānamiti smṛtam.
+cittaikāgryaṃ tu sallakṣye samādhānamiti smṛtam.
 {% endtab %}
 {% endtabs %}
 
