--- a/sec1/009.md
+++ b/sec1/009.md
@@ -12,8 +12,13 @@ description: Definition of Mumukshutvam
 इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
+{% tab title="ITRANS" %}
+saMsArabandhanirmuktiH kathaM syAnme dayAnidhe,  
+iti yA sudRRiDhA buddhirvaktavyA sA mumukShutA.
+{% endtab %}
+
+{% tab title="IAST" %}
+saṃsārabandhanirmuktiḥ kathaṃ syānme dayānidhe,  
 iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
 {% endtab %}
 {% endtabs %}
