--- a/sec1/010.md
+++ b/sec1/010.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+उक्तसाधनयुक्तेन विचारः पुरुषेण हि ।  
+कर्तव्यो ज्ञानसिद्ध्यर्थमात्मनः शुभमिच्छता॥१०॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+uktasAdhanayuktena vichAraH puruSheNa hi,  
+kartavyo j~nAnasiddhyarthamAtmanaH shubhamichChatA.
+{% endtab %}
+
+{% tab title="IAST" %}
+uktasādhanayuktena vicāraḥ puruṣeṇa hi,  
+kartavyo jñānasiddhyarthamātmanaḥ śubhamicchatā.
 {% endtab %}
 {% endtabs %}
 
