--- a/sec1/011.md
+++ b/sec1/011.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+नोत्पद्यते विना ज्ञानं विचारेणान्यसाधनैः।  
+यथा पदार्थभानं हि प्रकाशेन विना क्वचित्॥११॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+notpadyate vinA j~nAnaM vichAreNAnyasAdhanaiH,  
+yathA padArthabhAnaM hi prakAshena vinA kvachit.
+{% endtab %}
+
+{% tab title="IAST" %}
+notpadyate vinā jñānaṃ vicāreṇānyasādhanaiḥ,  
+yathā padārthabhānaṃ hi prakāśena vinā kvacit.
 {% endtab %}
 {% endtabs %}
 
