--- a/sec1/012.md
+++ b/sec1/012.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+कोऽहं कथमिदं जातं को वै कर्ताऽस्य विद्यते ।  
+उपादानं किमस्तीह विचारः सोऽयमीदृशः ॥१२॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+ko.ahaM kathamidaM jAtaM ko vai kartA.asya vidyate,  
+upAdAnaM kimastIha vichAraH so.ayamIdRRishaH.
+{% endtab %}
+
+{% tab title="IAST" %}
+ko'haṃ kathamidaṃ jātaṃ ko vai kartā'sya vidyate,  
+upādānaṃ kimastīha vicāraḥ so'yamīdṛśaḥ.
 {% endtab %}
 {% endtabs %}
 
