--- a/sec1/013.md
+++ b/sec1/013.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+नाहं भूतगणो देहो नाहं चाक्षगणस्तथा ।  
+एतद्विलक्षणः कश्चिद्विचारः सोऽयमीदृशः ॥१३॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+nAhaM bhUtagaNo deho nAhaM chAkShagaNastathA,  
+etadvilakShaNaH kashchidvichAraH so.ayamIdRRishaH.
+{% endtab %}
+
+{% tab title="IAST" %}
+nāhaṃ bhūtagaṇo deho nāhaṃ cākṣagaṇastathā,  
+etadvilakṣaṇaḥ kaścidvicāraḥ so'yamīdṛśaḥ.
 {% endtab %}
 {% endtabs %}
 
