--- a/sec1/014.md
+++ b/sec1/014.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+अज्ञानप्रभवं सर्वं ज्ञानेन प्रविलीयते ।  
+सङ्कल्पो विविधः कर्ता विचारः सोऽयमीदृशः ॥१४॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+aj~nAnaprabhavaM sarvaM j~nAnena pravilIyate,
+sa~Nkalpo vividhaH kartA vichAraH so.ayamIdRRishaH.
+{% endtab %}
+
+{% tab title="IAST" %}
+ajñānaprabhavaṃ sarvaṃ jñānena pravilīyate,  
+saṅkalpo vividhaḥ kartā vicāraḥ so'yamīdṛśaḥ.
 {% endtab %}
 {% endtabs %}
 
