--- a/sec1/015.md
+++ b/sec1/015.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+एतयोर्यदुपादानम् एकं सूक्ष्मं सदव्ययम् ।  
+यथैव मृद्घटादीनां विचारः सोऽयमीदृशः ॥१५॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+etayoryadupAdAnam ekaM sUkShmaM sadavyayam,  
+yathaiva mRRidghaTAdInAM vichAraH so.ayamIdRRishaH.
+{% endtab %}
+
+{% tab title="IAST" %}
+etayoryadupādānam ekaṃ sūkṣmaṃ sadavyayam,  
+yathaiva mṛdghaṭādīnāṃ vicāraḥ so'yamīdṛśaḥ.
 {% endtab %}
 {% endtabs %}
 
