--- a/sec1/016.md
+++ b/sec1/016.md
@@ -8,13 +8,18 @@ description: Definition of Mumukshutvam
 
 {% tabs %}
 {% tab title="Devanagari" %}
-संसारबन्धनिर्मुक्तिः कथं स्यान्मे दयानिधे।  
-इति या सुदृढा बुद्धिर्वक्तव्या सा मुमुक्षुता॥९॥
+अहमेकोऽपि सूक्ष्मश्च ज्ञाता साक्षी सदव्ययः ।  
+तदहं नात्र सन्देहो विचारः सोऽयमीदृशः ॥१६॥
 {% endtab %}
 
-{% tab title="Roman" %}
-saṁsārabandhanirmuktiḥ kathaṁ syānme dayānidhe,  
-iti yā sudṛḍhā buddhirvaktavyā sā mumukṣutā.
+{% tab title="ITRANS" %}
+ahameko.api sUkShmashcha j~nAtA sAkShI sadavyayaH,  
+tadahaM nAtra sandeho vichAraH so.ayamIdRRishaH.
+{% endtab %}
+
+{% tab title="IAST" %}
+ahameko'pi sūkṣmaśca jñātā sākṣī sadavyayaḥ,  
+tadahaṃ nātra sandeho vicāraḥ so'yamīdṛśaḥ.
 {% endtab %}
 {% endtabs %}
 
