--- a/sec1/001.md
+++ b/sec1/001.md
@@ -27,7 +27,7 @@ vyāpakaṃ sarvalokānāṃ kāraṇaṃ taṃ namāmyaham
 
 {% tabs %}
 {% tab title="Overall" %}
-I bow down to Sri Hari, who is the supreme bliss, the preceptor to the world, the Lord of the universe, who is all pervading, and the cause of all the worlds.
+I bow down to Sri Hari, who is the supreme bliss, the first teacher, the Lord of the universe, and who is the pervading all the worlds, and is their cause too.
 {% endtab %}
 
 {% tab title="Anvaya" %}
